fix(web): decrease scrollbar z-index

--- a/actor-sdk/sdk-web/src/styles/components/common/_scroller.scss
+++ b/actor-sdk/sdk-web/src/styles/components/common/_scroller.scss
@@ -27,7 +27,7 @@
   display: flex;
   width: 4px;
   position: absolute;
-  z-index: 1000;
+  z-index: 3;
   top: 0;
   bottom: 0;
   right: 0;
